--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Title</title>
+<meta name = "viewport" content = "width = device-width">
 <script type="text/javascript">
 
 
@@ -15,12 +16,25 @@
 </head>
 
 
-
-
-
 <body>
-Welcome to Maggie's website!
 
+<header>
+	<h1> Maggie's Website! </h1>
+	<nav>
+		<li> home </li>
+		<li> page two </li>
+	</nav>
+</header>
+
+<main>
+	<p>insert content here</p>
+<main>
+
+<footer>
+	<p>Last Updated 1.13.17</p>
+</footer>
 
 </body>
+
+
 </html>
