--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 		<li> page two </li>
 	</nav>
 </header>
-
+<section>
+	<h2> This is my first section </h2>
+</section>
 <main>
 	<p>insert content here</p>
 <main>
