--- a/index.html
+++ b/index.html
@@ -1,40 +1,36 @@
 <!DOCTYPE HTML>
 <html lang="en-us">
+
 <head>
-<meta charset="utf-8">
-<title>Title</title>
-<meta name = "viewport" content = "width = device-width">
-<script type="text/javascript">
-
-
-
-
-
-
-
-</script>
+    <meta charset="utf-8">
+    <title>Title</title>
+    <meta name="viewport" content="width = device-width">
+    <script type="text/javascript">
+    </script>
 </head>
 
 
 <body>
 
-<header>
-	<h1> Maggie's Website! </h1>
-	<nav>
-		<li> home </li>
-		<li> page two </li>
-	</nav>
-</header>
+    <header>
+        <h1> Maggie's Website! </h1>
+        <nav>
+            <li> home </li>
+            <li> page two </li>
+        </nav>
+    </header>
 
-	<h2> This is my first section </h2>
+    <h2> This is my first section </h2>
 
-<main>
-	<p>insert content here</p>
-<main>
+    <main>
+        <p>
+            <a href="visitor_analysis_persona.html"> Analysis </a>
+        </p>
+    </main>
 
-<footer>
-	<p>Last Updated 1.13.17</p>
-</footer>
+    <footer>
+        <p>Last Updated 1.13.17</p>
+    </footer>
 
 </body>
 
