--- a/visitor_analysis_persona.html
+++ b/visitor_analysis_persona.html
@@ -18,9 +18,7 @@
         </nav>
         <main>
             <h1>Visitor Analysis and Persona</h1>
-            <!-- ***********************************************
-Use the web site you think did the best job of meeting visitor needs during your 24 hour mobile browsing experience.
-************************************************* -->
+
             <h2>Rexburg Walmart Shuttle</h2>
 
             <p>URL:
@@ -30,10 +28,15 @@ Use the web site you think did the best job of meeting visitor needs during your
             <section id="analysis">
 
                 <h2>Visitor Analysis</h2>
-                <!--Add paragraphs to address the items in the visitor considerations document-->
-                <p></p>
+                <p>This site definitely meet the needs while being on mobile!
+                    <br> 1. Their demographics are college age students, their income is going to be on a student's budget, especially those poor enough not to have a car. The Education is those in college, and lastly, it is specifically for those college students in Rexburg.
+                    <br> 2. The site met the needs of the visitor by showing all of the shuttle times for the stops around Rexburg, along with showing a GPS tracker of where the bus currently is!
+                    <br> 3. The content was organized into three main sections. The section in the middle was for the map and the GPS tracker. The section on the left was a drop down menu showing all of the stop times and when the shuttle was going to a specific stop next. The section on the right was another menu and was dedicated for trouble shooting and contact information.
+                    <br> 4. The site made the mobile experience enjoyable by simply making it easy to use. It was easy to see where exactly the bus was, and easy to click the left menu and see the exact time when it would come to your stop.
+                    <br> 5. I do think it facilitated to people in the mobile environment. I think this because it was very easy to use. Like I explained in other examples, it was easy to see the important information that you went to the site for, and was easy to see when the future stops were going to be.
+                </p>
 
-                <!--Put the screenshot in the img element below-->
+
                 <figure>
                     <img alt="Good" src="IMG_2679.PNG" height="494px" width="300px">
                 </figure>
