--- a/visitor_analysis_persona.html
+++ b/visitor_analysis_persona.html
@@ -43,13 +43,54 @@
             </section>
             <section id="persona">
                 <h2>Persona</h2>
-                <!--Add paragraphs to address the items in the persona reading to build a persona for this site-->
-                <p></p>
+
+
+                <p>
+                    Persona: BYUI Student
+                    <br> Fictional Name: Carlee Stewart
+                    <br> Job Title: College Student
+                    <br> Demographics:
+                </p>
+                <ul>
+                    <li> 20 Years Old </li>
+                    <li> Single </li>
+                    <li> Has no car</li>
+                    <li> Working on her Bachelors Degree</li>
+                </ul>
+
+                <p>
+                    Goals and Tasks: Her goal is to graduate college, while staying well fed and able to get to Walmart. Her tasks are to balance school work and social time, while keeping time to go to Walmart based on the schedule.
+                    <br> Environment: She lives in one of the dorms around campus and is used to budgeting. She is comfortable taking public transportation and scheduling her time around a tight schedule.
+                    <br> Quote: "I wonder when the Walmart Shuttle is going to come to my complex tomorrow."
+                </p>
+
+
+
 
                 <!--Put the image of the persona in the img element below-->
                 <figure>
                     <img alt="" src="">
                 </figure>
+            </section>
+
+            <section id="contrast">
+                <h2>Site Contrast</h2>
+                <p>
+                    1. The worst site I visited was <a href="http://ilearn.byui.edu"> iLearn </a> (I realized I don't really visit non-school websites)
+                    <br>
+                    <br> 2. The sad thing is, iLearn should know that their demographic is students! When I went to iLearn all I could see was the future due dates, it wasn't nearly as user friendly as the desktop site. To complete any quizzes, you have to go to the desktop site. Whereas the Rexburg Shuttle Site knew that they needed simplicity, and all of the features on their desktop site, needed to be on their mobile site as well.
+                    <br>
+                    <br> 3. The Rexburg Shuttle site knew that their users needed to see where the shuttle was, and when the shuttle would be at certain stops. iLearn knows that students need to do homework, but their mobile site doesn't allow them to do homework! What happens when their laptop breaks and they don't have the time nor the means to go to campus and use one of those computers? It's really hard to navigate the desktop site on the mobile format.
+                    <br>
+                    <br> 4. The Rexburg Shuttle site organized them into three main areas of their webiste. Two menus on each side that you are able to toggle. One with the shuttle times, and the other with contact information. iLearn has one main site area, and it just has calendar information, and at the bottom has access to the desktop site.
+                    <br>
+                    <br> 5. Again, the Rexburg Shuttle Site is basically the same as their desktop site, but it is integrated, better as to that there are three different screens that you can view to get the information. The iLearn site is horrible, because you can only view the calendar and the due dates. They force you to use the desktop site if you want to do anything like quizzes, and even then you ahve to zoon way in to make sure you don't click the wrong thing.
+
+
+                </p>
+
+
+
             </section>
 
         </main>
