--- a/visitor_analysis_persona.html
+++ b/visitor_analysis_persona.html
@@ -69,7 +69,7 @@
 
                 <!--Put the image of the persona in the img element below-->
                 <figure>
-                    <img alt="" src="">
+                    <img alt="persona" src="Screen%20Shot%202017-01-21%20at%2010.58.26%20PM.png">
                 </figure>
             </section>
 
