--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <main>
         <p>
             <a href="visitor_analysis_persona.html"> Analysis </a>
+            <a href="weather_planning.html"> Weather Planning Document </a>
         </p>
     </main>
 
