--- a/mobilesite.html
+++ b/mobilesite.html
@@ -24,7 +24,7 @@
 
         <div id="cities">
             <select>
-                <option>Select City</option>
+                <option selected>Select City</option>
                 <option>Franklin</option>
                 <option>Greenville</option>
                 <option>Springfield</option>
