--- a/mobilesite.html
+++ b/mobilesite.html
@@ -22,6 +22,7 @@
 
     <main>
 
+        <h1 id="name"> Franklin</h1>
         <div id="cities">
             <select>
                 <option selected>Select City</option>
@@ -30,8 +31,6 @@
                 <option>Springfield</option>
             </select>
         </div>
-
-
     </main>
 
     <footer>
