--- a/mobilesite.html
+++ b/mobilesite.html
@@ -21,8 +21,10 @@
 
 
     <main>
+        <div id="name">
+            Franklin
+        </div>
 
-        <h1 id="name"> Franklin</h1>
         <div id="cities">
             <select>
                 <option selected>Select City</option>
@@ -30,6 +32,13 @@
                 <option>Greenville</option>
                 <option>Springfield</option>
             </select>
+        </div>
+
+        <div id="current">
+            <h1 id="weathertype"> Sunny</h1>
+            <h2 is="current"> 84 &#8457;</h2>
+            <h2 id='hi'>HI <br> 90&#8457;</h2>
+            <h2 id='lo'> LO <br> 66&#8457;</h2>
         </div>
     </main>
 
