--- a/mobilesite.html
+++ b/mobilesite.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Weather Planning Document</title>
+    <title>Daily Weather</title>
     <meta name="viewport" content="width = device-width">
     <script type="text/javascript">
     </script>
@@ -34,12 +34,16 @@
             </select>
         </div>
 
-        <div id="current">
+        <section id="current">
             <h1 id="weathertype"> Sunny</h1>
-            <h2 is="current"> 84 &#8457;</h2>
+            <h2 id="currentw"> 84 &#8457;</h2>
             <h2 id='hi'>HI <br> 90&#8457;</h2>
             <h2 id='lo'> LO <br> 66&#8457;</h2>
-        </div>
+        </section>
+
+
+
+
     </main>
 
     <footer>
