--- a/mobilesite.html
+++ b/mobilesite.html
@@ -43,11 +43,12 @@
 
 
 
-
+        <img alt="small" src="iphone.png" id="pic">
     </main>
 
     <footer>
-        <p>Last Updated 2.1.17</p>
+        <p><a href="index.html"> Home</a> &nbsp; <a href="visitor_analysis_persona.html"> Analysis </a> &nbsp; <a href="weather_planning.html"> Weather Planning Document </a> </p>
+
     </footer>
 
 </body>
