--- a/mobilesite.html
+++ b/mobilesite.html
@@ -24,7 +24,7 @@
         <div id="name">
             Franklin
         </div>
-
+        <a href="iphone.png">Wireframe</a>
         <div id="cities">
             <select>
                 <option selected>Select City</option>
@@ -36,18 +36,59 @@
 
         <section id="current">
             <h1 id="weathertype"> Sunny</h1>
-            <h2 id="currentw"> 84 &#8457;</h2>
+            <h2 id="currentw"> 84&#8457;</h2>
             <h2 id='hi'>HI <br> 90&#8457;</h2>
             <h2 id='lo'> LO <br> 66&#8457;</h2>
+        </section>
+        <section id="wind">
+            <h3> Wind Direction: &nbsp;<br> Southwest</h3>
+            <h3>Wind Speed: &nbsp; <br>1-5MPH</h3>
+            <h3> Precipation: &nbsp; <br>0 inches</h3>
+        </section>
+        <section id="hourly">
+            <h5 id='hourss'>12am<br> 67&#8457;</h5>
+            <h5 id='hourss'>1am <br> 67&#8457;</h5>
+            <h5 id='hourss'>2am <br> 69&#8457;</h5>
+            <h5 id='hourss'>3am <br> 69&#8457;</h5>
+            <h5 id='hourss'>4am <br> 69&#8457;</h5>
+            <h5 id='hourss'>5am <br> 70&#8457;</h5>
+            <h5 id='hour'>6am   <br> 69&#8457;</h5>
+            <h5 id='hour'>7am   <br> 72&#8457;</h5>
+            <h5 id='hour'>8am   <br> 74&#8457;</h5>
+            <h5 id='hour'>9am   <br> 77&#8457;</h5>
+            <h5 id='hour'>10am  <br> 79&#8457;</h5>
+            <h5 id='hour'>11am  <br> 81&#8457;</h5>
+            <h5 id='hour'>12pm  <br> 84&#8457;</h5>
+            <h5 id='hour'>1pm   <br> 86&#8457;</h5>
+            <h5 id='hour'>2pm   <br> 88&#8457;</h5>
+            <h5 id='hour'>3pm   <br> 90&#8457;</h5>
+            <h5 id='hour'>4pm   <br> 90&#8457;</h5>
+            <h5 id='hour'>5pm   <br> 85&#8457;</h5>
+            <h5 id='hours'>6pm  <br> 83&#8457;</h5>
+            <h5 id='hours'>7pm  <br> 79&#8457;</h5>
+            <h5 id='hours'>8pm  <br> 74&#8457;</h5>
+            <h5 id='hours'>9pm  <br> 70&#8457;</h5>
+            <h5 id='hours'>10pm <br> 68&#8457;</h5>
+            <h5 id='hours'>11pm <br> 66&#8457;</h5>
+
         </section>
 
 
 
-        <a href="iphone.png">Wireframe</a>
+
     </main>
 
     <footer>
-        <p><a href="index.html"> Home</a> &nbsp; <a href="visitor_analysis_persona.html"> Analysis </a> &nbsp; <a href="weather_planning.html"> Weather Planning Document </a> </p>
+        <div id="container">
+
+            <div id="header"></div>
+            <div id="body"></div>
+
+
+            <div id="footer">
+                <p id="foot"><a href="index.html"> Home</a> &nbsp; <a href="visitor_analysis_persona.html"> Analysis </a> &nbsp; <a href="weather_planning.html"> Weather Planning Document </a> </p>
+            </div>
+        </div>
 
     </footer>
 
