--- a/mobilesite.html
+++ b/mobilesite.html
@@ -24,7 +24,7 @@
         <div id="name">
             Franklin
         </div>
-        <a href="iphone.png">Wireframe</a>
+        <a href="iphone.png">phone</a> <a href="ipad.png"> tablet</a> <a href="browser.png"> browser</a>
         <div id="cities">
             <select>
                 <option selected>Select City</option>
