--- a/greenville.html
+++ b/greenville.html
@@ -36,67 +36,67 @@
 
 
         <section id="current">
-            <h1 id="weathertype"> Sunny</h1>
-            <h2 id="currentw"> 84&#8457;</h2>
-            <h2 id='hi'>HI <br> 90&#8457;</h2>
-            <h2 id='lo'> LO <br> 66&#8457;</h2>
+            <h1 id="weathertype"> Afternoon Thunderstorms</h1>
+            <h2 id="currentw"> 83&#8457;</h2>
+            <h2 id='hi'>HI <br> 84&#8457;</h2>
+            <h2 id='lo'> LO <br> 54&#8457;</h2>
         </section>
 
         <div id="flexbox">
             <div class="box">12am
-                <br> 67&#8457;</div>
+                <br> 55&#8457;</div>
             <div class="box">1am
-                <br> 67&#8457;</div>
+                <br> 56&#8457;</div>
             <div class="box">2am
-                <br> 69&#8457;</div>
+                <br> 56&#8457;</div>
             <div class="box">3am
-                <br> 69&#8457;</div>
+                <br> 56&#8457;</div>
             <div class="box">4am
-                <br> 69&#8457;</div>
+                <br> 57&#8457;</div>
             <div class="box">5am
-                <br> 70&#8457;</div>
+                <br> 57&#8457;</div>
             <div class="box">6am
-                <br> 69&#8457;</div>
+                <br> 58&#8457;</div>
             <div class="box">7am
-                <br> 72&#8457;</div>
+                <br> 62&#8457;</div>
             <div class="box">8am
-                <br> 74&#8457;</div>
+                <br> 63&#8457;</div>
             <div class="box">9am
-                <br> 77&#8457;</div>
+                <br> 67&#8457;</div>
             <div class="box">10am
-                <br> 79&#8457;</div>
-            <div class="box">11am
-                <br> 81&#8457;</div>
-            <div class="box">12pm
-                <br> 84&#8457;</div>
-            <div class="box">1pm
-                <br> 86&#8457;</div>
-            <div class="box">2pm
-                <br> 88&#8457;</div>
-            <div class="box">3pm
-                <br> 90&#8457;</div>
-            <div class="box">4pm
-                <br> 90&#8457;</div>
-            <div class="box">5pm
-                <br> 85&#8457;</div>
-            <div class="box">6pm
-                <br> 83&#8457;</div>
-            <div class="box">7pm
-                <br> 79&#8457;</div>
-            <div class="box">8pm
-                <br> 74&#8457;</div>
-            <div class="box">9pm
                 <br> 70&#8457;</div>
-            <div class="box">10pm
+            <div class="box">11am
+                <br> 73&#8457;</div>
+            <div class="box">12pm
+                <br> 77&#8457;</div>
+            <div class="box">1pm
+                <br> 80&#8457;</div>
+            <div class="box">2pm
+                <br> 84&#8457;</div>
+            <div class="box">3pm
+                <br> 83&#8457;</div>
+            <div class="box">4pm
+                <br> 83&#8457;</div>
+            <div class="box">5pm
+                <br> 80&#8457;</div>
+            <div class="box">6pm
+                <br> 79&#8457;</div>
+            <div class="box">7pm
+                <br> 74&#8457;</div>
+            <div class="box">8pm
+                <br> 70&#8457;</div>
+            <div class="box">9pm
                 <br> 68&#8457;</div>
+            <div class="box">10pm
+                <br> 60&#8457;</div>
             <div class="box">11pm
-                <br> 66&#8457;</div>
+                <br> 58&#8457;</div>
         </div>
 
         <section id="wind">
-            <h3> Wind Direction: &nbsp;<br> Southwest</h3>
-            <h3>Wind Speed: &nbsp; <br>1-5MPH</h3>
-            <h3> Precipation: &nbsp; <br>0 inches</h3>
+            <h3> Wind Direction: &nbsp;<br> West</h3>
+            <h3>Wind Speed: &nbsp; <br>15 - 20MPH</h3>
+            <h3> Precipation: &nbsp; <br>70% Chance</h3>
         </section>
 
 
