--- a/greenville.html
+++ b/greenville.html
@@ -37,12 +37,16 @@
 
         <section id="current">
             <h1 id="weathertype"> Afternoon Thunderstorms</h1>
+            <img src="thunderstorm.jpeg" alt="Thunderstorm" id="picture">
             <h2 id="currentw"> 83&#8457;</h2>
             <h2 id='hi'>HI <br> 84&#8457;</h2>
             <h2 id='lo'> LO <br> 54&#8457;</h2>
         </section>
 
         <div id="flexbox">
+            <div class="big">
+                <h2 id="hours">Hourly</h2>
+            </div>
             <div class="box">12am
                 <br> 55&#8457;</div>
             <div class="box">1am
