--- a/mobilesite.html
+++ b/mobilesite.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Greenville Daily Weather</title>
+    <title>Franklin Daily Weather</title>
     <meta name="viewport" content="width = device-width">
     <script type="text/javascript">
     </script>
@@ -28,21 +28,21 @@
         </div>
 
         <div id="name">
-            Greenville
+            Franklin
         </div>
-
-
-
-
 
         <section id="current">
             <h1 id="weathertype"> Sunny</h1>
+            <img src="http://blog.realgoodtoys.com/files/2014/09/sunshine.jpg" alt="Sunny_Weather" id="picture">
             <h2 id="currentw"> 84&#8457;</h2>
             <h2 id='hi'>HI <br> 90&#8457;</h2>
             <h2 id='lo'> LO <br> 66&#8457;</h2>
         </section>
 
         <div id="flexbox">
+            <div class="big">
+                <h2 id="hourly">Hourly</h2>
+            </div>
             <div class="box">12am
                 <br> 67&#8457;</div>
             <div class="box">1am
