--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <a href="weather_planning.html"> Weather Planning Document </a>
             <br>
             <a href="mobilesite.html"> Mobile Weather</a>
+            <a href="Presentation.html"> Class Presentation on HTML Title and Alt</a>
         </p>
     </main>
 
