fix title and pic

--- a/Presentation.html
+++ b/Presentation.html
@@ -72,7 +72,7 @@
         <br>
         <h1> Title Appears When You Hover Over Image</h1>
         <p>
-            <img src="Cupcake.png" alt="Relief Society Goals" title="Cupcake">
+            <img src="goals-01.png" alt="Relief Society Goals" title="Goals">
         </p>
         <br>
         <br>
