--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <a href="mobilesite.html"> Mobile Weather</a>
             <br>
             <a href="Presentation.html"> Class Presentation on HTML Title and Alt</a>
+            <a href="responsive_media/index.html"> Responsive Media</a>
         </p>
     </main>
 
