--- a/responsive_media/index.html
+++ b/responsive_media/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zxx">
 
 <head>
     <meta charset="utf-8">
@@ -29,8 +29,8 @@
             <figure class="featured-image">
 
                 <picture>
-                    <source srcset="images/bridge-750.jpg" media="(min-width: 1200px)" alt="Grand Canyon Bridge">
-                    <source srcset="images/bridge-550.jpg" media="(min-width: 750px)" alt="Grand Canyon Bridge">
+                    <source srcset="images/bridge-750.jpg" media="(min-width: 1200px)">
+                    <source srcset="images/bridge-550.jpg" media="(min-width: 750px)">
                     <img src="images/bridge-350.jpg" alt="Grand Canyon Bridge">
                 </picture>
 
