--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             <a href="Presentation.html"> Class Presentation on HTML Title and Alt</a>
             <br>
             <a href="responsive_media/index.html"> Responsive Media</a>
+            <br>
+            <a href="Lesson_4/main.html"> Lesson 4</a>
         </p>
     </main>
 
