--- a/Lesson_4/main.html
+++ b/Lesson_4/main.html
@@ -23,19 +23,18 @@
 
     <main>
         <p>
-            <a href="Lesson_4/cdn.txt"> Text File</a>
+
+            <a href="index.htm"> Alcove </a>
             <br>
-            <a href="Lesson_4/index.htm"> Alcove </a>
+            <a href="InsertHtmlBegin.htm"> Insert HTML</a>
             <br>
-            <a href="Lesson_4/InsertHtmlBegin.htm"> Insert HTML</a>
+            <a href="animatedMenuBegin.htm"> Animated Menu</a>
             <br>
-            <a href="Lesson_4/adnimatedMenuBegin.htm"> Animated Menu</a>
+            <a href="DropDownMenuBegin.htm"> Animated Drop Down Menu</a>
             <br>
-            <a href="Lesson_4/DropDownMenuBegin.htm"> Animated Drop Down Menu</a>
+            <a href="toggleButtonBegin.htm"> Toggle Button</a>
             <br>
-            <a href="Lesson_4/toggleButtonBegin.htm"> Toggle Button</a>
-            <br>
-            <a href="Lesson_4/fruitBasketBegin.htm"> Fruit Basket</a>
+            <a href="fruitBasketBegin.htm"> Fruit Basket</a>
         </p>
     </main>
 
