--- a/Lesson_4/fruitBasketBegin.htm
+++ b/Lesson_4/fruitBasketBegin.htm
@@ -5,6 +5,21 @@
     <meta charset="UTF-8">
     <title>Fruit Basket</title>
     <link rel="stylesheet" href="css/fruitBasket.css">
+
+</head>
+
+<body>
+    <div class="container">
+        <ul class="fruits">
+
+
+        </ul>
+    </div>
+    <!-- Use for Production Server -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <!-- Use for Local Development -->
+    <!-- <script src="javascript/jquery-3.1.1.min.js"></script>-->
+
     <script>
         $(function () {
             // Array containing Objects with Fruit names & quantities
@@ -47,19 +62,6 @@
             });
         })
     </script>
-</head>
-
-<body>
-    <div class="container">
-        <ul class="fruits">
-
-
-        </ul>
-    </div>
-    <!-- Use for Production Server -->
-    <script src="//code.jquery.com/jquery-3.1.1.min.js"></script>
-    <!-- Use for Local Development -->
-    <!-- <script src="javascript/jquery-3.1.1.min.js"></script>-->
 </body>
 
 </html>
