--- a/Lesson_4/main.html
+++ b/Lesson_4/main.html
@@ -24,7 +24,8 @@
     <main>
         <p>
 
-            <a href="index.htm"> Alcove </a>
+
+            <a href="index.htm"> Index </a>
             <br>
             <a href="InsertHtmlBegin.htm"> Insert HTML</a>
             <br>
