--- a/Lesson_4/DropDownMenuBegin.htm
+++ b/Lesson_4/DropDownMenuBegin.htm
@@ -6,24 +6,7 @@
     <title>Dropdown Menu</title>
     <link rel="stylesheet" href="css/dropdownmenu.css">
 
-    <script>
-        $(function () {
 
-            // $('.dropdownMenu > li').hover(function () // {
-
-            //   $(this).children('ul').slideDown(200);
-            // }, function () {
-
-            //  $(this).children('ul').slideUp(200);
-            // });
-
-            $('.dropdownMenu > li').hover(function () {
-                $(this).children('ul').slideToggle(200)
-
-            });
-
-        })
-    </script>
 </head>
 
 <body>
@@ -62,9 +45,28 @@
     </ul>
 
     <!-- Use for Production Server -->
-    <script src="//code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Use for Local Development -->
     <!-- <script src="javascript/jquery-3.1.1.min.js"></script>-->
+
+    <script>
+        $(function () {
+
+            // $('.dropdownMenu > li').hover(function () // {
+
+            //   $(this).children('ul').slideDown(200);
+            // }, function () {
+
+            //  $(this).children('ul').slideUp(200);
+            // });
+
+            $('.dropdownMenu > li').hover(function () {
+                $(this).children('ul').slideToggle(200)
+
+            });
+
+        })
+    </script>
 </body>
 
 </html>
