--- a/Lesson_4/animatedMenuBegin.htm
+++ b/Lesson_4/animatedMenuBegin.htm
@@ -6,6 +6,22 @@
     <title>Animated Menu</title>
     <link rel="stylesheet" href="css/animatedMenu.css">
 
+
+</head>
+
+<body>
+    <ul class="navigation">
+        <li>About Us</li>
+        <li>Services</li>
+        <li>Catalog</li>
+        <li>Blog</li>
+        <li>Contact</li>
+    </ul>
+    <!-- Use for Production Server -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <!-- Use for Local Development -->
+    <!-- <script src="javascript/jquery-3.1.1.min.js"></script>-->
+
     <script>
         $(function () {
 
@@ -21,20 +37,6 @@
 
         });
     </script>
-</head>
-
-<body>
-    <ul class="navigation">
-        <li>About Us</li>
-        <li>Services</li>
-        <li>Catalog</li>
-        <li>Blog</li>
-        <li>Contact</li>
-    </ul>
-    <!-- Use for Production Server -->
-    <script src="//code.jquery.com/jquery-3.1.1.min.js"></script>
-    <!-- Use for Local Development -->
-    <!-- <script src="javascript/jquery-3.1.1.min.js"></script>-->
 </body>
 
 </html>
