--- a/Lesson_4/index.htm
+++ b/Lesson_4/index.htm
@@ -6,38 +6,7 @@
     <title>Alcove Digital Systems</title>
     <link rel="stylesheet" href="css/style.css">
     <script></script>
-    <script>
-        $(function () {
 
-
-            var inputFields = $('input[type="text"]');
-            toggleStyle = function () {
-                if (inputFields.css('background-color') === 'rgb(255, 0, 0)') {
-                    inputFields.css('background-color', 'rgb(255, 255, 255)');
-                } else {
-                    inputFields.css('background-color', 'rgb(255, 0, 0)');
-                }
-            }
-
-            $('#ReqAQuoteBtn').click(toggleStyle);
-
-
-            $('.coreValues').prepend('<li><strong> This is brand new !! </strong> </li>')
-
-
-            $("<li><strong> This is also great !! </strong> </li").prependTo(".coreValues");
-
-            var nameVal = $('input[name="nameVal"]');
-
-            function FillEmpty() {
-                if (nameVal.val() == '') {
-                    nameVal.val("John Doe");
-                }
-            }
-            $('#ReqAQuoteBtn').click(FillEmpty);
-
-        })
-    </script>
 </head>
 
 <body>
@@ -154,12 +123,46 @@
 
         <div class="footer">
             <h5>© Alcove Digital Systems | <a href="#">Terms of Use</a></h5>
+
         </div>
     </div>
     <!-- Use for Production Server -->
-    <script src="//code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Use for Local Development -->
     <!-- <script src="javascript/jquery-3.1.1.min.js"></script>-->
+
+    <script>
+        $(function () {
+
+
+            var inputFields = $('input[type="text"]');
+            toggleStyle = function () {
+                if (inputFields.css('background-color') === 'rgb(255, 0, 0)') {
+                    inputFields.css('background-color', 'rgb(255, 255, 255)');
+                } else {
+                    inputFields.css('background-color', 'rgb(255, 0, 0)');
+                }
+            }
+
+            $('#ReqAQuoteBtn').click(toggleStyle);
+
+
+            $('.coreValues').prepend('<li><strong> This is brand new !! </strong> </li>')
+
+
+            $("<li><strong> This is also great !! </strong> </li").prependTo(".coreValues");
+
+            var nameVal = $('input[name="nameVal"]');
+
+            function FillEmpty() {
+                if (nameVal.val() == '') {
+                    nameVal.val("John Doe");
+                }
+            }
+            $('#ReqAQuoteBtn').click(FillEmpty);
+
+        })
+    </script>
 </body>
 
 </html>
