--- a/Lesson_4/toggleButtonBegin.htm
+++ b/Lesson_4/toggleButtonBegin.htm
@@ -25,10 +25,23 @@
         <a href="#" class="toggleBtn">Fuel Monitor</a>
         <a href="#" class="toggleBtn">Battery Monitor</a>
     </div>
+
     <!-- Use for Production Server -->
-    <script src="//code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Use for Local Development -->
     <!-- <script src="javascript/jquery-3.1.1.min.js"></script>-->
+
+    <script>
+        $(function () {
+
+            $('.toggleBtn').click(function () {
+
+                $(this).toggleClass("toggleOn");
+            });
+
+
+        })
+    </script>
 </body>
 
 </html>
