--- a/Lesson_4/index.htm
+++ b/Lesson_4/index.htm
@@ -127,7 +127,7 @@
         </div>
     </div>
     <!-- Use for Production Server -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Use for Local Development -->
     <!-- <script src="javascript/jquery-3.1.1.min.js"></script>-->
 
