--- a/Lesson_4/main.html
+++ b/Lesson_4/main.html
@@ -27,7 +27,7 @@
 
             <a href="index.htm"> Index </a>
             <br>
-            <a href="InsertHtmlBegin.htm"> Insert HTML</a>
+            <a href="InsertHTMLBegin.htm"> Insert HTML</a>
             <br>
             <a href="animatedMenuBegin.htm"> Animated Menu</a>
             <br>
