--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             <a href="responsive_media/index.html"> Responsive Media</a>
             <br>
             <a href="Lesson_4/main.html"> Lesson 4</a>
+            <br>
+            <a href="jsonweather-html/index.html">API Activity</a>
+            <br>
+            <a href="apiweather/index.html">Current Weather</a>
         </p>
     </main>
 
