--- a/apiweather/index.html
+++ b/apiweather/index.html
@@ -43,7 +43,7 @@
                 <div id="cove">
                     <div id="status"> Loading...</div>
                 </div>
-                <h1 id="weathertype"></h1>
+                <h1 id="summary"></h1>
             </div>
 
             <img src="http://blog.realgoodtoys.com/files/2014/09/sunshine.jpg" alt="Sunny_Weather" id="picture">
@@ -55,14 +55,6 @@
                 </div>
                 <h2 id="currentTemp"></h2>
             </div>
-
-
-
-
-            <div id='HI'>
-                <h2>HI</h2>
-                <br>
-                <h2 id='high'></h2></div>
 
 
             <h2 id='hi'>HI <br> 90&#8457;</h2>
