--- a/apiweather/index.html
+++ b/apiweather/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Franklin Daily Weather</title>
+    <title>Current Conditions</title>
     <meta name="viewport" content="width = device-width">
     <script type="text/javascript">
     </script>
@@ -41,7 +41,7 @@
 
             <div id="namee">
                 <div id="cove">
-                    <div id="status"> Loading...</div>
+                    <div id="statuss"> Loading...</div>
                 </div>
                 <h1 id="summary"></h1>
             </div>
@@ -51,7 +51,7 @@
 
             <div id="names">
                 <div id="cov">
-                    <div id="status">Loading...</div>
+                    <div id="statuses">Loading...</div>
                 </div>
                 <h2 id="currentTemp"></h2>
             </div>
