--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             <a href="jsonweather-html/index.html">API Activity</a>
             <br>
             <a href="apiweather/index.html">Current Weather</a>
+            <br>
+            <a href="search/weather.html">Search Weather Page</a>
         </p>
     </main>
 
