--- a/search/weather.html
+++ b/search/weather.html
@@ -3,13 +3,20 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Current Conditions</title>
+    <title>Search Bar</title>
     <meta name="viewport" content="width = device-width">
     <script type="text/javascript">
     </script>
-    <link rel="stylesheet" type="text/css" href="mobile.css">
+    <link rel="stylesheet" type="text/css" href="weather_css.css">
 </head>
-
+<!-- *********************************************
+* Who Did You Collaborate With On This Assessment?
+* 1. Maggie Klinke
+* 2.
+* 3.
+* 4.
+* 5.
+* ******************************************** -->
 
 <body>
 
@@ -18,7 +25,15 @@
             <a href="iphone.png">phone</a> <a href="ipad.png"> tablet</a> <a href="browser.png"> browser</a>
         </nav>
     </header>
+    <form method="get" action="//autocomplete.wunderground.com/aq" id="srchfrm">
+        <input type="search" name="query" id="query">
+        <input type="submit" name="submit" value="Search" id="send">
+    </form>
 
+
+    <section id="searchResults">
+        <h2 id='results'>Search Results</h2>
+    </section>
 
     <main>
         <div id="weatherflexbox">
@@ -57,8 +72,8 @@
             </div>
 
 
-            <h2 id='hi'>HI <br> 90&#8457;</h2>
-            <h2 id='lo'> LO <br> 66&#8457;</h2>
+            <h2 id='hi'>HI <br> --&#8457;</h2>
+            <h2 id='lo'> LO <br> --&#8457;</h2>
         </section>
 
         <div id="flexbox">
@@ -117,18 +132,14 @@
 
 
         <section id="wind">
-            <div id="visib">
-                <h3>Visibility:</h3></div>
-            <div id="visibility"></div>
-            <div id="windspeed">
-                <h3>Wind Speed:</h3></div>
+
+            <div id="add1"></div>
+            <div id="add2">
+            </div>
             <div id="speed"></div>
-            <div id="precipitation">
-                <h3>Precipitation:</h3> </div>
+            <div id="add3">
+            </div>
             <div id="precip"></div>
-
-
-
 
         </section>
 
@@ -146,9 +157,9 @@
         </div>
 
     </footer>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
-    <script src="/apiweather/remote.js"></script>
+    <script src="weather.js"></script>
 </body>
 
 
