--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <a href="apiweather/index.html">Current Weather</a>
             <br>
             <a href="search/weather.html">Search Weather Page</a>
+            <a href="/baseball/Royals_2014.html"> Royals</a>
         </p>
     </main>
 
