--- a/baseball/Royals_2014.html
+++ b/baseball/Royals_2014.html
@@ -19,51 +19,191 @@
 
     <main>
 
+        <div class="big">
+            <h2>Royals 2014 World Series Roster</h2>
+        </div>
         <div id="flexbox">
-            <div class="big">
-                <h2 id="hourly">Royals World Series Roster</h2>
+
+            <div class="box" id="r1"> <img src="perez.png" alt="Perez" class="playerpic" id="pic1">
+                <div id="text1" class="hide">
+                    <p>2014 Season Stats</p>
+                    <p id="r1name1"></p>
+                    <p id="r1num1"></p>
+                    <p id="r1pos1"></p>
+                    <p id="r1rbi1"></p>
+                    <p id="r1home1"></p>
+                </div>
             </div>
-            <div class="box" id="r1"></div>
-            <div class="box" id="r2"></div>
-            <div class="box" id="r3"></div>
-            <div class="box" id="r4"></div>
-            <div class="box" id="r5"></div>
-            <div class="box" id="r6"></div>
-            <div class="box" id="r7"></div>
-            <div class="box" id="r8"></div>
+
+            <div class="box" id="r2"> <img src="gordon.png" alt="Gordon" class="playerpic" id="pic2">
+                <div id="text2" class="hide">
+                    <p>2014 Season Stats</p>
+                    <p id="r1name2"></p>
+                    <p id="r1num2"></p>
+                    <p id="r1pos3"></p>
+                    <p id="r1rbi2"></p>
+                    <p id="r1home2"></p>
+                </div>
+            </div>
+            <div class="box" id="r3"> <img src="escobar.png" alt="Escobar" class="playerpic" id="pic3">
+                <div id="text3" class="hide">
+                    <p>2014 Season Stats</p>
+                    <p id="r1name3"></p>
+                    <p id="r1num3"></p>
+                    <p id="r1pos3"></p>
+                    <p id="r1rbi3"></p>
+                    <p id="r1home3"></p>
+                </div>
+            </div>
+            <div class="box" id="r4"> <img src="hosmer.png" alt="Hosmer" class="playerpic" id="pic4">
+                <div id="text4" class="hide">
+                    <p>2014 Season Stats</p>
+                    <p id="r1name4"></p>
+                    <p id="r1num4"></p>
+                    <p id="r1pos4"></p>
+                    <p id="r1rbi4"></p>
+                    <p id="r1home4"></p>
+                </div>
+            </div>
+            <div class="box" id="r5"> <img src="Cain.png" alt="Cain" class="playerpic" id="pic5">
+                <div id="text5" class="hide">
+                    <p>2014 Season Stats</p>
+                    <p id="r1name5"></p>
+                    <p id="r1num5"></p>
+                    <p id="r1pos5"></p>
+                    <p id="r1rbi5"></p>
+                    <p id="r1home5"></p>
+                </div>
+            </div>
+            <div class="box" id="r6"> <img src="butler.png" alt="Butler" class="playerpic" id="pic6">
+                <div id="text6" class="hide">
+                    <p>2014 Season Stats</p>
+                    <p id="r1name6"></p>
+                    <p id="r1num6"></p>
+                    <p id="r1pos6"></p>
+                    <p id="r1rbi6"></p>
+                    <p id="r1home6"></p>
+                </div>
+            </div>
+            <div class="box" id="r7"> <img src="infante.png" alt="Infante" class="playerpic" id="pic7">
+                <div id="text7" class="hide">
+                    <p>2014 Season Stats</p>
+                    <p id="r1name7"></p>
+                    <p id="r1num7"></p>
+                    <p id="r1pos7"></p>
+                    <p id="r1rbi7"></p>
+                    <p id="r1home7"></p>
+                </div>
+            </div>
+            <div class="box"> <img src="moustakas.png" alt="Moustakas" class="playerpic" id="pic8">
+                <div id="text8" class="hide">
+                    <p>2014 Season Stats</p>
+                    <p id="r1name8"></p>
+                    <p id="r1num8"></p>
+                    <p id="r1pos8"></p>
+                    <p id="r1rbi8"></p>
+                    <p id="r1home8"></p>
+                </div>
+            </div>
+
+
+
 
         </div>
 
-
+        <div class="big">
+            <h2>Royals 2017 Opening Day Roster</h2>
+        </div>
 
         <div id="flexbox2">
-            <div class="big">
-                <h2 id="hourly">Royals 2017 Roster</h2>
+
+            <div class="box"> <img src="" alt="" class="playerpic" id="ppic1">
+                <div id="ttext1" class="hide">
+                    <p>2014 Season Stats</p>
+                    <p id="r2name1"></p>
+                    <p id="r2num1"></p>
+                    <p id="r2pos1"></p>
+                    <p id="r2rbi1"></p>
+                    <p id="r2home1"></p>
+                </div>
             </div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
+            <div class="box"> <img src="" alt="" class="playerpic" id="ppic2">
+                <div id="ttext2" class="hide">
+                    <p>2014 Season Stats</p>
+                    <p id="r2name2"></p>
+                    <p id="r2num2"></p>
+                    <p id="r2pos2"></p>
+                    <p id="r2rbi2"></p>
+                    <p id="r2home2"></p>
+                </div>
+            </div>
+            <div class="box"> <img src="" alt="" class="playerpic" id="ppic3">
+                <div id="ttext3" class="hide">
+                    <p>2014 Season Stats</p>
+                    <p id="r2name3"></p>
+                    <p id="r2num3"></p>
+                    <p id="r2pos3"></p>
+                    <p id="r2rbi3"></p>
+                    <p id="r2home3"></p>
+                </div>
+            </div>
+            <div class="box"> <img src="" alt="" class="playerpic" id="ppic4">
+                <div id="ttext8" class="hide">
+                    <p>2014 Season Stats</p>
+                    <p id="r2name4"></p>
+                    <p id="r2num4"></p>
+                    <p id="r2pos4"></p>
+                    <p id="r2rbi4"></p>
+                    <p id="r2home4"></p>
+                </div>
+            </div>
+            <div class="box"> <img src="" alt="" class="playerpic" id="ppic5">
+                <div id="ttext5" class="hide">
+                    <p>2014 Season Stats</p>
+                    <p id="r2name5"></p>
+                    <p id="r2num5"></p>
+                    <p id="r2pos5"></p>
+                    <p id="r2rbi5"></p>
+                    <p id="r2home5"></p>
+                </div>
+            </div>
+            <div class="box"> <img src="" alt="" class="playerpic" id="ppic6">
+                <div id="ttext6" class="hide">
+                    <p>2014 Season Stats</p>
+                    <p id="r2name6"></p>
+                    <p id="r2num6"></p>
+                    <p id="r2pos6"></p>
+                    <p id="r2rbi6"></p>
+                    <p id="r2home6"></p>
+                </div>
+            </div>
+            <div class="box"> <img src="" alt="" class="playerpic" id="ppic7">
+                <div id="ttext7" class="hide">
+                    <p>2014 Season Stats</p>
+                    <p id="r2name7"></p>
+                    <p id="r2num7"></p>
+                    <p id="r2pos7"></p>
+                    <p id="r2rbi7"></p>
+                    <p id="r2home7"></p>
+                </div>
+            </div>
+            <div class="box"> <img src="" alt="" class="playerpic" id="ppic8">
+                <div id="ttext8" class="hide">
+                    <p>2014 Season Stats</p>
+                    <p id="r2name8"></p>
+                    <p id="r2num8"></p>
+                    <p id="r2pos8"></p>
+                    <p id="r2rbi8"></p>
+                    <p id="r2home8"></p>
+                </div>
+            </div>
 
         </div>
 
 
     </main>
 
-    <footer>
-        <div id="container">
-
-            <div id="header"></div>
-            <div id="body"></div>
-            <div id="footer">
-                <p id="foot"><a href="index.html"> Home</a> &nbsp; <a href="visitor_analysis_persona.html"> Analysis </a> &nbsp; <a href="weather_planning.html"> Weather Planning Document </a> </p>
-            </div>
-        </div>
-
+    <footer id="inserth">
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
