--- a/baseball/header.html
+++ b/baseball/header.html
@@ -1,5 +1,5 @@
 <header class="page-header">
-    <h1>Responsive Media Demo</h1>
+    <h1>Baseball Stats </h1>
 
     <nav class="page-nav">
         <ul>
