--- a/baseball/Royals_2014.html
+++ b/baseball/Royals_2014.html
@@ -24,7 +24,9 @@
         </div>
         <div id="flexbox">
 
-            <div class="box" id="r1"> <img src="perez.png" alt="Perez" class="playerpic" id="pic1">
+            <div class="box" id="r1">
+
+                <img src="perez.png" alt="Perez" class="playerpic" id="pic1">
                 <div id="text1" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="r1name1"></p>
@@ -40,7 +42,7 @@
                     <p>2014 Season Stats</p>
                     <p id="r1name2"></p>
                     <p id="r1num2"></p>
-                    <p id="r1pos3"></p>
+                    <p id="r1pos2"></p>
                     <p id="r1rbi2"></p>
                     <p id="r1home2"></p>
                 </div>
@@ -65,7 +67,7 @@
                     <p id="r1home4"></p>
                 </div>
             </div>
-            <div class="box" id="r5"> <img src="Cain.png" alt="Cain" class="playerpic" id="pic5">
+            <div class="box" id="r5"> <img src="cain.png" alt="Cain" class="playerpic" id="pic5">
                 <div id="text5" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="r1name5"></p>
@@ -148,7 +150,7 @@
                 </div>
             </div>
             <div class="box"> <img src="" alt="" class="playerpic" id="ppic4">
-                <div id="ttext8" class="hide">
+                <div id="ttext4" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="r2name4"></p>
                     <p id="r2num4"></p>
