--- a/baseball/header.html
+++ b/baseball/header.html
@@ -3,11 +3,11 @@
 
     <nav class="page-nav">
         <ul>
-            <li><a href="#" title="Home">Home</a></li>
-            <li><a href="Royals_2014.html" title="Royals-2014" title="Royals-2014">Royals-2014</a></li>
-            <li><a href="#" title="Giants">Giants</a></li>
-            <li><a href="#" title="Royals-2015" title="Royals-2015">Royals-2015</a></li>
-            <li><a href="#" title="Mets">Mets</a></li>
+            <li><a href="#" title="Home" id="onenav">Home</a></li>
+            <li><a href="Royals_2014.html" title="Royals-2014" id="twonav">Royals-2014</a></li>
+            <li><a href="#" title="Giants" id="threenav">Giants</a></li>
+            <li><a href="#" title="Royals-2015" id="fournav">Royals-2015</a></li>
+            <li><a href="#" title="Mets" id="fivenav">Mets</a></li>
         </ul>
     </nav>
 </header>
